[subham] : Added refractored noteService
